--- a/intelligNET/app/src/main/AndroidManifest.xml
+++ b/intelligNET/app/src/main/AndroidManifest.xml
@@ -16,13 +16,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity
+            android:name=".LoginActivity"
+            android:noHistory="true"
+            android:windowSoftInputMode="stateVisible|adjustPan" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+
+
+
         </activity>
         <activity android:name=".TashchezMenu" >
         </activity>
@@ -53,9 +55,22 @@
             android:label="@string/title_activity_tashchez_pl"
             android:theme="@style/AppTheme" >
         </activity>
+        <activity android:name=".MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
-            android:name=".MainActivity"
-            >
+            android:name=".SignupActivity"
+            android:noHistory="true"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden|adjustResize" >
+        </activity>
+        <activity android:name=".WallActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan" >
+
         </activity>
     </application>
 
