--- a/intelligNET/app/src/main/AndroidManifest.xml
+++ b/intelligNET/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:icon="@mipmap/ic_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
             android:noHistory="true"
@@ -51,10 +51,10 @@
         </activity>
         <activity
             android:name=".TashchezUI"
-            android:label="@string/title_activity_tashchez_pl"
             android:noHistory="false"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="stateHidden|adjustPan" >
+            android:windowSoftInputMode="stateHidden|adjustPan"
+            >
         </activity>
         <activity android:name=".MainActivity" >
 
@@ -71,7 +71,9 @@
         </activity>
         <activity
             android:name=".TashchezHigayonUI"
-            android:noHistory="true" >
+            android:noHistory="false"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden|adjustPan">
         </activity>
         <activity android:name=".SplashActivity"
             android:noHistory="true">
