--- a/intelligNET/app/src/main/AndroidManifest.xml
+++ b/intelligNET/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:icon="@mipmap/ic_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".LoginActivity"
             android:noHistory="true"
@@ -54,6 +55,7 @@
             android:noHistory="false"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateHidden|adjustPan"
+            android:screenOrientation="nosensor"
             >
         </activity>
         <activity android:name=".MainActivity" >
@@ -73,7 +75,8 @@
             android:name=".TashchezHigayonUI"
             android:noHistory="false"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="stateHidden|adjustPan">
+            android:windowSoftInputMode="stateHidden|adjustPan"
+            android:screenOrientation="nosensor">
         </activity>
         <activity android:name=".SplashActivity"
             android:noHistory="true">
