erase + save + almost finish
finish erase tashchez
finish save tashchez
finish everything in tashchez except of helpForDay connect to DB

--- a/intelligNET/app/src/main/AndroidManifest.xml
+++ b/intelligNET/app/src/main/AndroidManifest.xml
@@ -58,7 +58,9 @@
             android:screenOrientation="nosensor"
             >
         </activity>
-        <activity android:name=".MainActivity" >
+        <activity
+            android:name=".MainActivity"
+            android:noHistory="false">
 
         </activity>
         <activity
